--- a/public/css/home.css
+++ b/public/css/home.css
@@ -25,7 +25,7 @@ body{
     justify-content: space-between;
     align-items: center;
     padding: 0 5vw;
-    background: #fff;
+    background: #000;
     z-index: 9;
 }
 
@@ -33,13 +33,16 @@ body{
     display: flex;
     list-style: none;
 }
+h1{
+    color: #fff;
+}
 
 .link{
     padding: 10px;
     margin-left: 10px;
     text-decoration: none;
     text-transform: capitalize;
-    color: #000;
+    color: #fff;
 }
 
 .header{
