--- a/public/css/home.css
+++ b/public/css/home.css
@@ -49,7 +49,7 @@ h1{
     margin-top: 60px;
     width: 100%;
     height: calc(100vh - 60px);
-    background: url(../img/header.png);
+    background: url(../img/bg1.jpg);
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -61,7 +61,7 @@ h1{
 }
 
 .heading{
-    color: #fff;
+    color: #000;
     text-transform: capitalize;
     font-size: 80px;
     line-height: 60px;
@@ -76,7 +76,7 @@ h1{
 .heading .no-fill{
     font-style: italic;
     color: transparent;
-    -webkit-text-stroke: 2px #fff;
+    -webkit-text-stroke: 2px #000;
 }
 
 .btn{
@@ -89,6 +89,7 @@ h1{
 }
 
 .blogs-section{
+    word-break: break-word;
     width: 100%;
     padding: 50px 5vw;
     display: grid;
