--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,52 +1,127 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+
 }
 
-body{
+body {
     width: 100%;
     position: relative;
     font-family: 'poppins', sans-serif;
 }
 
-::selection{
-    background: #1b1b1b;
-    color: #fff;
-}
 
-.navbar{
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    color: #fff;
     width: 100%;
     height: 60px;
     position: fixed;
     top: 0;
     left: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 0 5vw;
     background: #000;
     z-index: 9;
 }
 
-.links-container{
-    display: flex;
-    list-style: none;
-}
-h1{
+.nav-links a {
     color: #fff;
 }
 
-.link{
+.logo {
+    font-size: 32px;
+}
+
+.menu {
+    display: flex;
+    gap: 1em;
+    font-size: 18px;
+}
+
+.menu li {
+    padding: 5px 14px;
+}
+
+.menu li:hover {
+    display: inline-block;
+    background-color: grey;
+    transition: 0.3s ease;
+    border-radius: 5px;
+}
+
+input[type=checkbox] {
+    display: none;
+}
+
+.hamburger {
+    display: none;
+    font-size: 24px;
+    user-select: none;
+}
+
+@media (max-width: 768px) {
+    .menu {
+        display: none;
+        position: absolute;
+        background-color: #000;
+        right: 0;
+        left: 0;
+        text-align: center;
+        padding: 16px 0;
+    }
+
+    .menu li:hover {
+        display: inline-block;
+        background-color: grey;
+        transition: 0.3s ease;
+        border-radius: 5px;
+    }
+
+    .menu li+li {
+        margin-top: 20px;
+    }
+
+    input[type=checkbox]:checked~.menu {
+        display: block;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+
+}
+
+::selection {
+    background: #1b1b1b;
+    color: #fff;
+}
+
+
+/* .links-container{
+    display: flex;
+    list-style: none;
+} */
+h1 {
+    color: #fff;
+}
+
+/* .link{
     padding: 10px;
     margin-left: 10px;
     text-decoration: none;
     text-transform: capitalize;
     color: #fff;
-}
+} */
 
-.header{
-    margin-top: 60px;
+.header {
+
     width: 100%;
     height: calc(100vh - 60px);
     background: url(../img/bg1.jpg);
@@ -56,11 +131,11 @@ h1{
     align-items: center;
 }
 
-.content{
+.content {
     text-align: center;
 }
 
-.heading{
+.heading {
     color: #000;
     text-transform: capitalize;
     font-size: 80px;
@@ -68,18 +143,18 @@ h1{
     margin-bottom: 80px;
 }
 
-.heading .small{
+.heading .small {
     display: block;
     font-size: 40px;
 }
 
-.heading .no-fill{
+.heading .no-fill {
     font-style: italic;
     color: transparent;
     -webkit-text-stroke: 2px #000;
 }
 
-.btn{
+.btn {
     padding: 10px 20px;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.7);
@@ -88,7 +163,7 @@ h1{
     text-transform: capitalize;
 }
 
-.blogs-section{
+.blogs-section {
     word-break: break-word;
     width: 100%;
     padding: 50px 5vw;
@@ -97,7 +172,7 @@ h1{
     grid-gap: 80px;
 }
 
-.blog-image{
+.blog-image {
     width: 100%;
     height: 250px;
     object-fit: cover;
@@ -105,23 +180,24 @@ h1{
     margin-bottom: 10px;
 }
 
-.blog-overview{
+.blog-overview {
     margin: 10px 0 20px;
     line-height: 30px;
 }
 
-.btn.dark{
+.btn.dark {
     background: #1b1b1b;
     color: #fff;
 }
-@media screen and (min-width:360px){
-    
-.blogs-section {
-    word-break: break-word;
-    width: 100%;
-    padding: 50px 5vw;
-    
-    /* grid-template-columns: repeat(2, 1fr); */
-    
-}
+
+@media screen and (min-width:360px) {
+
+    .blogs-section {
+        word-break: break-word;
+        width: 100%;
+        padding: 50px 5vw;
+
+        /* grid-template-columns: repeat(2, 1fr); */
+
+    }
 }
