--- a/public/css/home.css
+++ b/public/css/home.css
@@ -49,7 +49,7 @@ body {
 }
 
 .menu li:hover {
-    display: inline-block;
+    /* display: inline-block; */
     background-color: grey;
     transition: 0.3s ease;
     border-radius: 5px;
@@ -72,12 +72,13 @@ input[type=checkbox] {
         background-color: #000;
         right: 0;
         left: 0;
-        text-align: center;
-        padding: 16px 0;
+        text-align: left;
+        padding: 16px 40px;
+        
     }
 
     .menu li:hover {
-        display: inline-block;
+        /* display: inline-block; */
         background-color: grey;
         transition: 0.3s ease;
         border-radius: 5px;
